<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <ImageView
        android:id="@+id/imageVieworderbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/room5"
        android:scaleType="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/orderbackground"/>

    <TextView
        android:id="@+id/textViewaptname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clover_apartment"
        app:layout_constraintTop_toBottomOf="@+id/imageVieworderbg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/textVieworderhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_booking_information"
        app:layout_constraintTop_toBottomOf="@+id/textViewaptname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:padding="10dp"
        android:background="@drawable/bordertotal"/>

    <TextView
        android:id="@+id/textViewroomtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_type"
        app:layout_constraintTop_toBottomOf="@+id/textVieworderhead"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewcheckindate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Check_in"
        app:layout_constraintTop_toBottomOf="@+id/textViewroomtype"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewcheckoutdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Check_out"
        app:layout_constraintTop_toBottomOf="@+id/textViewcheckindate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewtotalorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount"
        app:layout_constraintTop_toBottomOf="@+id/textViewcheckoutdate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>





































